--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <section id="esperienze">
         <div class="container-fluid">
+            <h2 class="esperienze-header">Esperienze lavorative</h2>
             <div id="carousel" class="carousel slide" data-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -120,16 +121,16 @@
 
     <section id="skills">
         <div class="container-fluid">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h2 class="skills-header">Capacità e competenze</h2>
+            <p>Di seguito le abilità e capacità che ho acquisito durante le mie esperienze lavorative e scolastiche.</p>
             <div class="row">
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 1</h3>
+                            <h3 class="skill-title">Plan 1</h3>
                         </div>
                         <div class="card-body">
-                            <h2>Free</h2>
+                            <h2 class="skill-level">Free</h2>
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
@@ -139,10 +140,10 @@
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 2</h3>
+                            <h3 class="skill-title">Plan 2</h3>
                         </div>
                         <div class="card-body">
-                            <h2>$49 / mo</h2>
+                            <h2 class="skill-level">$49 / mo</h2>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
@@ -152,10 +153,10 @@
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 3</h3>
+                            <h3 class="skill-title">Plan 3</h3>
                         </div>
                         <div class="card-body">
-                            <h2>$99 / mo</h2>
+                            <h2 class="skill-level">$99 / mo</h2>
                             <p>Pirority Listing</p>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
@@ -168,10 +169,10 @@
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 1</h3>
+                            <h3 class="skill-title">Plan 1</h3>
                         </div>
                         <div class="card-body">
-                            <h2>Free</h2>
+                            <h2 class="skill-level">Free</h2>
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
@@ -181,10 +182,10 @@
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 2</h3>
+                            <h3 class="skill-title">Plan 2</h3>
                         </div>
                         <div class="card-body">
-                            <h2>$49 / mo</h2>
+                            <h2 class="skill-level">$49 / mo</h2>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
@@ -194,10 +195,10 @@
                 <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Plan 3</h3>
+                            <h3 class="skill-title">Plan 3</h3>
                         </div>
                         <div class="card-body">
-                            <h2>$99 / mo</h2>
+                            <h2 class="skill-level">$99 / mo</h2>
                             <p>Pirority Listing</p>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
@@ -242,6 +243,7 @@
 
             <p class="copyright-text">@NicolaDerocchi 2022</p>
             <p class="copyright-text">Tel: +39 3486933578</p>
+            <p class="copyright-text"> <a href="mailto:nicoladerocchi3@gmail.com">Email: nicoladerocchi3@gmail.com</a> - <a href="mailto:nicoladerocchi@icloud.com">nicoladerocchi@icloud.com</a></p>
         </div>
     </footer>
 
