--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
     <!-- Skills -->
 
     <section id="skills">
-        <div class="container-fluid">
+        <div class="container-fluid skills-container">
             <h2 class="skills-header">Capacità e competenze</h2>
             <p>Di seguito le abilità e capacità che ho acquisito durante le mie esperienze lavorative e scolastiche.</p>
             <div class="row">
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
                             <h3 class="skill-title">Plan 1</h3>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
                             <h3 class="skill-title">Plan 2</h3>
@@ -150,14 +150,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-12 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="skill-title">Plan 3</h3>
+                            <h3 class="skill-title">Plan 2</h3>
                         </div>
                         <div class="card-body">
-                            <h2 class="skill-level">$99 / mo</h2>
-                            <p>Pirority Listing</p>
+                            <h2 class="skill-level">$49 / mo</h2>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
@@ -166,7 +165,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
                             <h3 class="skill-title">Plan 1</h3>
@@ -179,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
                             <h3 class="skill-title">Plan 2</h3>
@@ -192,14 +191,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 pricing-col">
+                <div class="col-lg-4 col-md-12 col-sm-12 pricing-col">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="skill-title">Plan 3</h3>
+                            <h3 class="skill-title">Plan 2</h3>
                         </div>
                         <div class="card-body">
-                            <h2 class="skill-level">$99 / mo</h2>
-                            <p>Pirority Listing</p>
+                            <h2 class="skill-level">$49 / mo</h2>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
